# wasi2fx

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: arguments.rs  main.rs  tests.rs
test/assets/: main_test.wat
