[package]
name = "wasi2fx"
version = "0.0.1"
edition = "2021"
description = "This tool converts WebAssembly System Interface (WASI) dependent Wasm files to be compatible with the MeshX's Fiber runtime."
keywords = ["fx", "fiber", "wasi"]
license = "MIT"
repository = "https://github.com/meshx-org/wasi2fx"

[dependencies]
walrus = "0.20.3"
clap = { version = "4.5.9", features = ["derive"] }
anyhow = { version = "1.0", default-features = false }
env_logger = "0.11.0"
log = "0.4.17"
wasmprinter = "0.214.0"
wat = "1.212.0"
